--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "hhru",
+  "name": "rick_and_morty",
   "version": "1.0.0",
   "description": "",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.2",
     "pg": "^8.12.0"
   }
 }
